	  a genuine modulefiles directory.
	* Expand '$$' to the current process id when performing one
	  level of variable expansion for the MODULESBEGINENV env.var
	* Fixed up the automake/autoconf scripts to create a workable
	  distribution tarball
	* Fixed the configuration behavior if --exec-prefix is given
	* Updated the config/tcl.m4 (used by configure)

	Contributor:
	 	Mark Lakata  		<lakata@mips.com>
	* removed configure *.in files from testsuite and added envvars to
	  allow running the testsuite from another directory
	* other fixes to testsuite
	* allowed one argument for 'switch', i.e. "module switch foo/1.3"
	  is the same as "module switch foo foo/1.3"
	* bug fix in cmdXResources regarding parsing the XRDB
	* removed probetcl from distribution; function moved to aclocal.m4
        * special shell chars in env vars are escaped rather than
	  quoted. This allows the use of single quotes inside the env var
	* noglob option turned on for module command in csh/tcsh
	* use customed temp file routine, rather than tmpnam or tempnam
	* minor bugs
	
****************************   Release 3.1 ******************************
Modules 3.1.6
Thu Jan  3 20:56:16 PST 2002		R.K. Owen (rk@owen.sj.ca.us)
	Contributors:
		Scott Gaskins		<sgaskins@us.ibm.com>
	 	Leo Butler		<lbutler@brocade.com>)
		Philip Kearns		<Philip.Kearns@tellabs.com>
		Andy Bruce		<abruce@infocruiser.com>
	* A 'break' in a modulefile will cause the modulefile to
	  not be added to $LOADEDMODULES, but will be considered
	  a successful execution to not affect other modulefiles
	  being loaded concurrently (Patch due to Scott Gaskins).
	* Tests and docs added for the above.
	* Added CYGWIN/Windows specific code (due to Andy Bruce)
	* Fixed problem with module load when the full path
	  is given (patch due to Scott Gaskins).
	* Added tests for the above problem.
	* Added the Modules-Paper in PDF format (thanks to Philip Kearns
	  and Leo Butler for raising the issue).