@@ -1,4 +1,4 @@
-const char *version_string = "3.2.0c";
-const char *date_string = "2005-11-14";
+const char *version_string = "3.2.0rc1";
+const char *date_string = "2005-11-17";
 /* NEW TAG "modules-3-2-0c" */
 /* OLD TAG "modules-3-1-6" */
