@@ -54,6 +54,14 @@ Modules 3.2.0
 	* Updated the config/tcl.m4 (used by configure)
 
 	Contributor:
+	 	Andrew Ruder  		<aer@absoft.com>
+
+	* cmdConflict.c: Fixed memory allocation bug in cmdPrereq().
+	  When there is more than 1 argument to the prereq command, both
+	  savedlens and savedlists were indexed past what the initial malloc
+	  allowed.
+
+	Contributor:
 	 	Mark Lakata  		<lakata@mips.com>
 	* removed configure *.in files from testsuite and added envvars to
 	  allow running the testsuite from another directory
